// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute reserve endpoint missing reserve should return failure 1`] = `
{
  "errorMessage": "Response missing totalReserve",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1726771347653,
  },
}
`;

exports[`execute reserve endpoint should return success 1`] = `
{
  "data": {
    "result": 2000000,
    "ripcord": false,
  },
  "result": 2000000,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1726771347653,
  },
}
`;
